--- a/index.html
+++ b/index.html
@@ -4,25 +4,28 @@
 
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
-        <meta http-equiv="refresh" content="7761">
+        <script src="jquery-3.6.0.min.js"></script>
+        <meta http-equiv="refresh" content="141414">
 
     </head>
-    <body onload="ShowElements()">
-
-        <div id="elements">
-
-            <h1 id="middle-name">
-                BOGDAN
-                <hr>
-            </h1>
+    <body>
+        <img src="avatar_black.png" id="background-img">
+        <div class="elements">
+            <a href="https://github.com/bogdanctx">
+                <i class="fab fa-github fa-3x"></i>
+            </a>
+            <a href="https://tiktok.com/@bogdanctx">
+                <i class="fab fa-tiktok fa-3x"></i>
+            </a>
+            <a href="https://github.com/bogdanctx">
+                <i class="fab fa-youtube fa-3x"></i>
+            </a>
+            <a href="https://github.com/bogdanctx">
+                <i class="fab fa-discord fa-3x"></i>
+            </a>
         </div>
 
-        <script>
-            function ShowElements()
-            {
-                document.getElementById('elements').style.opacity=1;
-            }
-        </script>
+        <script src="main.js"></script>
 
     </body>
 </html>
