--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>Bogdanctx</title>
 
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
         <script src="jquery-3.6.0.min.js"></script>
         <meta http-equiv="refresh" content="141414">
