--- a/index.html
+++ b/index.html
@@ -12,16 +12,20 @@
         <img src="avatar_black.png" id="background-img">
         <div class="elements">
             <a href="https://github.com/bogdanctx">
+                <span class="tooltip">Github</span>
                 <i class="fab fa-github fa-3x"></i>
             </a>
             <a href="https://tiktok.com/@bogdanctx">
                 <i class="fab fa-tiktok fa-3x"></i>
             </a>
-            <a href="https://github.com/bogdanctx">
+            <a href="https://www.youtube.com/channel/UCgaZub-SQIexzw45AxTzLBg">
                 <i class="fab fa-youtube fa-3x"></i>
             </a>
-            <a href="https://github.com/bogdanctx">
+            <a href="https://discord.gg/qKJGcyfGCf">
                 <i class="fab fa-discord fa-3x"></i>
+            </a>
+            <a href="https://discord.com/api/oauth2/authorize?client_id=791671408996515840&permissions=8&scope=bot">
+                <i class="fas fa-robot fa-3x"></i>
             </a>
         </div>
 
