--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="https://www.youtube.com/channel/UCgaZub-SQIexzw45AxTzLBg">
                 <i class="fab fa-youtube fa-3x"></i>
             </a>
-            <a href="https://discord.gg/qKJGcyfGCf">
+            <a href="https://discord.gg/ky6kdtDYFH">
                 <i class="fab fa-discord fa-3x"></i>
             </a>
             <a href="https://discord.com/api/oauth2/authorize?client_id=791671408996515840&permissions=8&scope=bot">
