--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <html>
     <head>
         <title>Bogdanctx</title>
-
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
         <script src="jquery-3.6.0.min.js"></script>
-        <meta http-equiv="refresh" content="141414">
-
+        <meta http-equiv="refresh" content="114">
     </head>
     <body>
-        <img src="avatar_black.png" id="background-img">
+        <center>
+            <img src="aaa.png" id="avatar">
+        </center>
         <div class="elements">
             <a href="https://github.com/bogdanctx">
                 <i class="fab fa-github fa-3x"></i>
