--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
         <script src="jquery-3.6.0.min.js"></script>
-        <meta http-equiv="refresh" content="114">
     </head>
     <body>
         <center>
-            <img src="aaa.png" id="avatar">
-        </center>
-        <div class="elements">
+            <div class="elements">
+            <h1 id="name">BOGDAN</h1>
+            <br><br>
             <a href="https://github.com/bogdanctx">
                 <i class="fab fa-github fa-3x"></i>
             </a>
@@ -27,6 +26,7 @@
                 <i class="fas fa-robot fa-3x"></i>
             </a>
         </div>
+        </center>
 
         <script src="main.js"></script>
 
