--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="https://www.youtube.com/channel/UCMRBwIxZUyDZrVUDdNxxi4w">
                 <i class="fab fa-youtube fa-3x"></i>
             </a>
-            <a href="https://discord.gg/ky6kdtDYFH">
+            <a href="https://discord.gg/QHYFpdTjvv">
                 <i class="fab fa-discord fa-3x"></i>
             </a>
             <a href="https://discord.com/api/oauth2/authorize?client_id=791671408996515840&permissions=8&scope=bot">
