--- a/index.html
+++ b/index.html
@@ -6,29 +6,6 @@
         <script src="jquery-3.6.0.min.js"></script>
     </head>
     <body>
-        <center>
-            <div class="elements">
-            <h1 id="name">BOGDAN</h1>
-            <br><br>
-            <a href="https://github.com/bogdanctx">
-                <i class="fab fa-github fa-3x"></i>
-            </a>
-            <a href="https://tiktok.com/@bogdanctx">
-                <i class="fab fa-tiktok fa-3x"></i>
-            </a>
-            <a href="https://www.youtube.com/channel/UCMRBwIxZUyDZrVUDdNxxi4w">
-                <i class="fab fa-youtube fa-3x"></i>
-            </a>
-            <a href="https://discord.gg/QHYFpdTjvv">
-                <i class="fab fa-discord fa-3x"></i>
-            </a>
-            <a href="https://discord.com/api/oauth2/authorize?client_id=791671408996515840&permissions=8&scope=bot">
-                <i class="fas fa-robot fa-3x"></i>
-            </a>
-        </div>
-        </center>
-
-        <script src="main.js"></script>
-
+        <h1>vanilla events</h1>
     </body>
 </html>
